--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fluky Verification</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
     <style>
         body {
             background-color: #111;
@@ -63,6 +64,48 @@
             left: 0;
             color: #666;
         }
+
+        .google-btn {
+            width: 100%;
+            background: white;
+            color: black;
+            border-radius: 4px;
+            padding: 10px 16px;
+            font-weight: bold;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 8px;
+            margin-bottom: 16px;
+            cursor: pointer;
+            transition: all 0.3s ease;
+        }
+
+        .google-btn:hover {
+            background: #e5e5e5;
+        }
+
+        .divider {
+            display: flex;
+            align-items: center;
+            margin: 16px 0;
+            color: #666;
+        }
+
+        .divider::before,
+        .divider::after {
+            content: "";
+            flex: 1;
+            border-bottom: 1px solid #333;
+        }
+
+        .divider::before {
+            margin-right: 16px;
+        }
+
+        .divider::after {
+            margin-left: 16px;
+        }
     </style>
 </head>
 
@@ -79,6 +122,30 @@
 
             <!-- Login Form -->
             <div id="loginForm">
+                <div id="g_id_onload" data-client_id="YOUR_GOOGLE_CLIENT_ID.apps.googleusercontent.com"
+                    data-context="signin" data-ux_mode="popup" data-callback="handleGoogleSignIn"
+                    data-auto_prompt="false">
+                </div>
+
+                <div class="google-btn" id="googleSignInBtn">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24">
+                        <path fill="#4285F4"
+                            d="M22.56 12.25c0-.78-.07-1.53-.2-2.25H12v4.26h5.92c-.26 1.37-1.04 2.53-2.21 3.31v2.77h3.57c2.08-1.92 3.28-4.74 3.28-8.09z" />
+                        <path fill="#34A853"
+                            d="M12 23c2.97 0 5.46-.98 7.28-2.66l-3.57-2.77c-.98.66-2.23 1.06-3.71 1.06-2.86 0-5.29-1.93-6.16-4.53H2.18v2.84C3.99 20.53 7.7 23 12 23z" />
+                        <path fill="#FBBC05"
+                            d="M5.84 14.09c-.22-.66-.35-1.36-.35-2.09s.13-1.43.35-2.09V7.07H2.18C1.43 8.55 1 10.22 1 12s.43 3.45 1.18 4.93l2.85-2.22.81-.62z" />
+                        <path fill="#EA4335"
+                            d="M12 5.38c1.62 0 3.06.56 4.21 1.64l3.15-3.15C17.45 2.09 14.97 1 12 1 7.7 1 3.99 3.47 2.18 7.07l3.66 2.84c.87-2.6 3.3-4.53 6.16-4.53z" />
+                        <path fill="none" d="M1 1h22v22H1z" />
+                    </svg>
+                    Continue with Google
+                </div>
+
+                <div class="divider">
+                    OR
+                </div>
+
                 <h2 class="text-xl font-semibold mb-6 text-gray-300">SIGN IN</h2>
                 <div class="mb-4">
                     <label class="block text-gray-400 mb-2">EMAIL</label>
@@ -98,6 +165,25 @@
 
             <!-- Signup Form -->
             <div id="signupForm" class="hidden">
+                <div class="google-btn" onclick="googleSignIn()">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24">
+                        <path fill="#4285F4"
+                            d="M22.56 12.25c0-.78-.07-1.53-.2-2.25H12v4.26h5.92c-.26 1.37-1.04 2.53-2.21 3.31v2.77h3.57c2.08-1.92 3.28-4.74 3.28-8.09z" />
+                        <path fill="#34A853"
+                            d="M12 23c2.97 0 5.46-.98 7.28-2.66l-3.57-2.77c-.98.66-2.23 1.06-3.71 1.06-2.86 0-5.29-1.93-6.16-4.53H2.18v2.84C3.99 20.53 7.7 23 12 23z" />
+                        <path fill="#FBBC05"
+                            d="M5.84 14.09c-.22-.66-.35-1.36-.35-2.09s.13-1.43.35-2.09V7.07H2.18C1.43 8.55 1 10.22 1 12s.43 3.45 1.18 4.93l2.85-2.22.81-.62z" />
+                        <path fill="#EA4335"
+                            d="M12 5.38c1.62 0 3.06.56 4.21 1.64l3.15-3.15C17.45 2.09 14.97 1 12 1 7.7 1 3.99 3.47 2.18 7.07l3.66 2.84c.87-2.6 3.3-4.53 6.16-4.53z" />
+                        <path fill="none" d="M1 1h22v22H1z" />
+                    </svg>
+                    Continue with Google
+                </div>
+
+                <div class="divider">
+                    OR
+                </div>
+
                 <h2 class="text-xl font-semibold mb-6 text-gray-300">REGISTER</h2>
                 <div class="mb-4">
                     <label class="block text-gray-400 mb-2">EMAIL</label>
@@ -130,6 +216,7 @@
                 <h1 class="text-2xl font-light text-white fluky-logo">FLUKY</h1>
                 <p class="text-gray-400 terminal-line">USER: <span id="currentUserEmail"
                         class="text-white">user@example.com</span></p>
+                <p class="text-gray-400 terminal-line hidden" id="googleUserBadge">GOOGLE ACCOUNT</p>
             </div>
             <button onclick="logout()"
                 class="bg-gray-800 hover:bg-gray-700 text-white px-4 py-2 rounded">LOGOUT</button>
@@ -221,9 +308,11 @@
         const completedTasksElement = document.getElementById('completedTasks');
         const statusBadge = document.getElementById('statusBadge');
         const currentUserEmail = document.getElementById('currentUserEmail');
+        const googleUserBadge = document.getElementById('googleUserBadge');
 
         // State variables
         let currentUser = localStorage.getItem('currentUser') || null;
+        let currentUserIsGoogle = localStorage.getItem('currentUserIsGoogle') === 'true' || false;
         let currentTaskId = null;
         let countdownInterval = null;
 
@@ -240,6 +329,52 @@
                 reader.readAsDataURL(file);
             }
         });
+
+        // Google Sign-In Handler
+        function handleGoogleSignIn(response) {
+            // Decode the JWT response
+            const responsePayload = parseJwt(response.credential);
+
+            // Store user information
+            currentUser = responsePayload.email;
+            currentUserIsGoogle = true;
+
+            localStorage.setItem('currentUser', responsePayload.email);
+            localStorage.setItem('currentUserIsGoogle', 'true');
+
+            // Check if user exists, if not create account
+            const users = JSON.parse(localStorage.getItem('users'));
+            const userExists = users.some(user => user.email === responsePayload.email);
+
+            if (!userExists) {
+                users.push({
+                    email: responsePayload.email,
+                    password: '', // No password for Google users
+                    isGoogle: true
+                });
+                localStorage.setItem('users', JSON.stringify(users));
+            }
+
+            // Proceed to dashboard
+            authContainer.classList.add('hidden');
+            dashboardContainer.classList.remove('hidden');
+            loadDashboard();
+        }
+
+        function parseJwt(token) {
+            const base64Url = token.split('.')[1];
+            const base64 = base64Url.replace(/-/g, '+').replace(/_/g, '/');
+            const jsonPayload = decodeURIComponent(atob(base64).split('').map(function (c) {
+                return '%' + ('00' + c.charCodeAt(0).toString(16)).slice(-2);
+            }).join(''));
+
+            return JSON.parse(jsonPayload);
+        }
+
+        function googleSignIn() {
+            // Trigger Google Sign-In flow
+            google.accounts.id.prompt();
+        }
 
         // Navigation functions
         function showSignup() {
@@ -276,7 +411,7 @@
                 return;
             }
 
-            users.push({ email, password });
+            users.push({ email, password, isGoogle: false });
             localStorage.setItem('users', JSON.stringify(users));
 
             alert('Account created successfully');
@@ -293,23 +428,39 @@
             }
 
             const users = JSON.parse(localStorage.getItem('users'));
-            const user = users.find(user => user.email === email && user.password === password);
+            const user = users.find(user => user.email === email && (user.password === password || user.isGoogle));
 
             if (!user) {
                 alert('Invalid credentials');
                 return;
             }
 
+            if (user.isGoogle) {
+                alert('Please sign in with Google');
+                return;
+            }
+
             currentUser = email;
+            currentUserIsGoogle = false;
             localStorage.setItem('currentUser', email);
+            localStorage.setItem('currentUserIsGoogle', 'false');
             authContainer.classList.add('hidden');
             dashboardContainer.classList.remove('hidden');
             loadDashboard();
         }
 
         function logout() {
+            if (currentUserIsGoogle) {
+                // Revoke Google access
+                google.accounts.id.revoke(currentUser, done => {
+                    console.log('Google access revoked');
+                });
+            }
+
             currentUser = null;
+            currentUserIsGoogle = false;
             localStorage.removeItem('currentUser');
+            localStorage.removeItem('currentUserIsGoogle');
             dashboardContainer.classList.add('hidden');
             authContainer.classList.remove('hidden');
             showLogin();
@@ -320,6 +471,12 @@
             const tasks = JSON.parse(localStorage.getItem('tasks'));
             tasksContainer.innerHTML = '';
             currentUserEmail.textContent = currentUser;
+
+            if (currentUserIsGoogle) {
+                googleUserBadge.classList.remove('hidden');
+            } else {
+                googleUserBadge.classList.add('hidden');
+            }
 
             let completedCount = 0;
             tasks.forEach(task => {
@@ -429,6 +586,19 @@
 
         // Initialize the app
         window.addEventListener('DOMContentLoaded', () => {
+            // Initialize Google Sign-In
+            google.accounts.id.initialize({
+                client_id: "YOUR_GOOGLE_CLIENT_ID.apps.googleusercontent.com",
+                callback: handleGoogleSignIn
+            });
+
+            // Render Google Sign-In button
+            google.accounts.id.renderButton(
+                document.getElementById("googleSignInBtn"),
+                { theme: "outline", size: "large", width: "100%" }
+            );
+
+            // Check if user is logged in
             if (currentUser) {
                 authContainer.classList.add('hidden');
                 dashboardContainer.classList.remove('hidden');
