--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
             1: "https://www.youtube.com/channel/UCdBFQKUVewkE25jZBcGdMFA", // Replace with your YouTube channel URL
             2: "https://x.com/Fluky_Official", // Replace with your Twitter/X URL
             4: "https://www.instagram.com/fluky_portal_official?igsh=MXcwN3RxMzQ1cXA5&utm_source=qr", // Replace with your Instagram URL
-            5: "https://www.facebook.com/share/p/15ofF1LDMn/"  // Replace with your Facebook page URL
+            5: "https://www.facebook.com/profile.php?id=61578698795778"  // Replace with your Facebook page URL
         };
 
         // Initialize data structures
