--- a/index.html
+++ b/index.html
@@ -690,7 +690,7 @@
         window.addEventListener('DOMContentLoaded', () => {
             // Initialize Google Sign-In
             google.accounts.id.initialize({
-                client_id: "YOUR_GOOGLE_CLIENT_ID.apps.googleusercontent.com",
+                client_id: "48508544336-ffr2pdtvlbr0tu93g2eta82ggtk2gtth.apps.googleusercontent.com",
                 callback: handleGoogleSignIn
             });
 
