--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
                 <!-- Link box with copy button -->
                 <div class="mb-6">
                     <div class="flex items-center bg-gray-800 rounded-md overflow-hidden border border-gray">
-                        <input type="text" id="creepyLink" value="https://your-creepy-website.com/access"
+                        <input type="text" id="creepyLink" value="https://flukz.vercel.app"
                             class="flex-grow px-4 py-2 bg-transparent text-gray-300 font-mono text-sm truncate"
                             readonly>
                         <button id="copyButton"
