--- a/index.html
+++ b/index.html
@@ -341,6 +341,68 @@
                 }, 2000);
             });
         </script>
+
+        <div class="footer">
+            <div class="footer-content">
+                <div class="footer-links">
+                    <a href="/privacy-policy">Privacy Policy</a>
+                    <span class="divider">•</span>
+                    <a href="/terms-of-service">Terms of Service</a>
+                </div>
+                <div class="copyright">
+                    © <span id="current-year">2023</span> Fluky. All rights reserved.
+                </div>
+            </div>
+        </div>
+
+        <style>
+            .footer {
+                background-color: #111;
+                color: #e5e5e5;
+                padding: 2rem 0;
+                border-top: 1px solid #333;
+                font-family: 'Inter', sans-serif;
+            }
+
+            .footer-content {
+                max-width: 1200px;
+                margin: 0 auto;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                gap: 1rem;
+            }
+
+            .footer-links {
+                display: flex;
+                align-items: center;
+                gap: 1rem;
+            }
+
+            .footer-links a {
+                color: #e5e5e5;
+                text-decoration: none;
+                font-size: 0.9rem;
+                transition: color 0.2s;
+            }
+
+            .footer-links a:hover {
+                color: #fff;
+            }
+
+            .divider {
+                color: #666;
+            }
+
+            .copyright {
+                font-size: 0.8rem;
+                color: #999;
+            }
+        </style>
+
+        <script>
+            document.getElementById('current-year').textContent = new Date().getFullYear();
+        </script>
     </div>
 
     <script>
