--- a/index.html
+++ b/index.html
@@ -345,9 +345,9 @@
         <div class="footer">
             <div class="footer-content">
                 <div class="footer-links">
-                    <a href="/privacy-policy">Privacy Policy</a>
+                    <a href="privacy-policy.html">Privacy Policy</a>
                     <span class="divider">•</span>
-                    <a href="/terms-of-service">Terms of Service</a>
+                    <a href="privacy-policy.html">Terms of Service</a>
                 </div>
                 <div class="copyright">
                     © <span id="current-year">2023</span> Fluky. All rights reserved.
